Strip every inline comment; javadoc stays
The project rule has always been that names carry the explanation and
prose belongs in docs/, and the code had drifted a long way from it:
7,700 comment lines inside method bodies, most quoting the C they were
ported from. All of them are gone, from production and test sources
alike. Javadoc on classes, methods and fields is kept.

Full check after the strip: 8664 tests, 0 failed, 0 skipped.